# Forge

./: .gitignore  CMakeLists.txt  Config.lua  ForgeWin32Variables.cmake  README  World.lua  test.lua
src/Console/: CMakeLists.txt  main.cpp
src/Editor/: CMakeLists.txt  EditorInputHandler.cpp  EditorInputHandler.h  EditorResources.qrc  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  OpenGLPropertiesDialog.cpp  OpenGLPropertiesDialog.h  OpenGLPropertiesDialog.ui  OpenGLPropertyTableModel.cpp  OpenGLPropertyTableModel.h  main.cpp
src/Editor/EditorViews/: CMakeLists.txt  MaterialEditorView.cpp  MaterialEditorView.hpp
src/Forge/: CMakeLists.txt  Engine.cpp  Engine.h  FindLua52.cmake  Forge.cpp  Forge.rc  ForgeCLI.cpp  ForgeCLI.hpp  ForgeConfig.cpp  ForgeConfig.h  ForgeDependencies.cmake  ForgeMain.cpp  ForgeMain.hpp  main.cpp
src/Forge/Application/: Application.cpp  Application.hpp  CMakeLists.txt  ForgeCLI.cpp  ForgeCLI.hpp
src/Forge/Asset/: AssetLibrary.hpp  AssetTraits.hpp  CMakeLists.txt
src/Forge/AssetPlugins/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp  LoaderInterface.hpp  ObjLoader.cpp  ObjLoader.hpp
src/Forge/Assets/: AssetHandle.cpp  AssetHandle.hpp  AssetManager.cpp  AssetManager.hpp  AssetTypes.hpp  CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp  LoaderInterface.hpp  MeshManager.cpp  MeshManager.hpp  ObjLoader.cpp  ObjLoader.hpp
src/Forge/Config/: CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.hpp  ConfigLoader.cpp  ConfigLoader.hpp  Configuration.cpp  Configuration.hpp
src/Forge/Event/: CMakeLists.txt  Event.cpp  Event.hpp  Publisher.hpp  Subscriber.hpp
src/Forge/GameObject/: Attachable.cpp  Attachable.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  Transformation.cpp  Transformation.hpp
src/Forge/GameObject/Component/: CMakeLists.txt  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  ComponentTypes.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshInstance.cpp  MeshInstance.hpp  Script.cpp  Script.hpp
src/Forge/Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  DebugAxis.cpp  DebugAxis.h  ImageLoader.cpp  ImageLoader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  OrbitalCamera.cpp  OrbitalCamera.h  PositionCamera.cpp  PositionCamera.h  QtRenderer.hpp  QtRendererBackend.cpp  QtRendererBackend.hpp  RenderContext.cpp  RenderContext.hpp  RenderTask.cpp  RenderTask.h  RenderWindow.hpp  RenderWindow_X11.cpp  Renderer.cpp  Renderer.h  Renderer.hpp  RendererThread.cpp  RendererThread.hpp  RendererWidget.cpp  RendererWidget.h  ResizeEvent.cpp  ResizeEvent.h  SceneNode.cpp  SceneNode.h  StaticMesh.cpp  StaticMesh.h  (+14 more)
src/Forge/Graphics/Libraries/: AssetLibrary.hpp  AssetLoader.hpp  AssetTraits.hpp  CMakeLists.txt  MaterialLibrary.cpp  MaterialLibrary.hpp  MaterialLoader.cpp  MaterialLoader.hpp  MaterialTraits.hpp  MeshLibrary.cpp  MeshLibrary.hpp  MeshLoader.cpp  MeshLoader.hpp  MeshTraits.hpp  TechniqueLibrary.cpp  TechniqueLibrary.hpp  TechniqueTraits.hpp  TextureLibrary.cpp  TextureLibrary.hpp
src/Forge/Graphics/Light/: ADSLight.hpp  CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  LightSet.hpp  PointLight.hpp  SpotLight.hpp
src/Forge/Graphics/Loaders/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  MeshLoader.cpp  MeshLoader.h
src/Forge/Graphics/Material/: CMakeLists.txt  Material.cpp  Material.h  MaterialHandler.cpp  MaterialHandler.hpp  MaterialLoader.cpp  MaterialLoader.hpp
src/Forge/Graphics/OpenGL/: Blending.cpp  Blending.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  DepthTest.cpp  DepthTest.hpp  PixelStore.cpp  PixelStore.hpp  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/Forge/Graphics/Scene/: Attachable.cpp  Attachable.hpp  CMakeLists.txt  SceneConfig.cpp  SceneConfig.hpp  SceneLoader.cpp  (+5 more)
src/Forge/Input/: CMakeLists.txt  InputAction.h  InputHandler.cpp  InputHandler.hpp  KeyEvent.h  MouseEvent.h  QtInputHandler.cpp  QtInputHandler.h
src/Forge/Lua/: AssetDir.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetMap.hpp  AssetsLibrary.cpp  AssetsLibrary.hpp  CMakeLists.txt  ComponentsLibrary.cpp  ComponentsLibrary.hpp  EventLibrary.cpp  EventLibrary.hpp  InputLibrary.cpp  InputLibrary.hpp  Loader.hpp  LuaForwardDeclarations.hpp  LuaLibrary.hpp  LuaScript.hpp  LuaState.cpp  LuaState.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ObjectCreator.hpp  PrimitivesLibrary.cpp  PrimitivesLibrary.hpp  RendererLibrary.cpp  RendererLibrary.hpp  SceneLibrary.cpp  SceneLibrary.hpp  SceneLoader.cpp  SceneLoader.hpp  State.cpp  State.hpp  SystemInfo.cpp  SystemInfo.hpp  UserdataMap.hpp  Utils.cpp  Utils.hpp
src/Forge/Platform/: CMakeLists.txt
src/Forge/Qt/: CMakeLists.txt
src/Forge/State/: CMakeLists.txt  EngineState.cpp  EngineState.h  GameState.cpp  GameState.h  GameStateLibrary.cpp  GameStateLibrary.hpp  GameStateMachine.cpp  GameStateMachine.hpp  QtEngineState.cpp  QtEngineState.h  QtGameStateMachine.cpp  QtGameStateMachine.hpp
src/Forge/Time/: CMakeLists.txt  HighResClock.cpp  HighResClock.h  Timer.cpp  Timer.hpp
src/Forge/Util/: CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  HashUtils.cpp  HashUtils.h  JsonParser.cpp  JsonParser.h  Log.cpp  Log.h  LuaLoader.hpp  MaterialParser.cpp  MaterialParser.h  Math.hpp  Singleton.hpp  UniqueId.hpp
src/Game/: CMakeLists.txt  ForgeGame.cpp  ForgeGame.h  GameInputHandler.cpp  GameInputHandler.h  main.cpp
src/Paddlemonium/: CMakeLists.txt  PaddleGame.cpp  PaddleGame.h  main.cpp
src/Paddlemonium/Input/: InGameProcessor.cpp  InGameProcessor.hpp  InputHandler.cpp  InputHandler.h
src/Paddlemonium/State/: InGame.cpp  InGame.h  Menu.cpp  Menu.h
src/Tools/MaterialEditor/: CMakeLists.txt  Connection.cpp  Connection.hpp  EditorWindow.cpp  EditorWindow.hpp  EditorWindow.ui  MaterialNode.cpp  MaterialNode.hpp  Node.cpp  Node.hpp  NodeView.cpp  NodeView.hpp  PropertiesDialog.cpp  PropertiesDialog.hpp  PropertiesDialog.ui  SelectNameDialog.cpp  SelectNameDialog.hpp  SelectNameDialog.ui  TechniqueNode.cpp  TechniqueNode.hpp  main.cpp
(+148 files in other folders)
